--- a/package.json
+++ b/package.json
@@ -6,10 +6,14 @@
   "scripts": {
     "build": "rimraf ./buid && tsc",
     "start": "node build/index.js",
-    "dev": "ts-node-dev src/index.ts"
+    "dev": "ts-node-dev src/index.ts",
+    "test": "jest --watch *.ts"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
+    "@types/jest": "^29.4.0",
+    "jest": "^29.4.3",
+    "ts-jest": "^29.0.5",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.9.5"
   },
